# dbt-warehouse-platform

./: .gitignore  CLAUDE.md  README.md  dbt_project.yml  project.yml  pyproject.toml  requirements.txt  setup.bat  setup.sh
.claude/: gen_hr_data_report.py  gen_hr_ods_doc.py  gen_hr_spec_v2.py  hr_outliers.py  hr_report.py  tmp_query_hive.py  tmp_query_hive2.py
.claude/agents/: README.md  agent-03-dwd.md  agent-06-ads.md  agent-07-ob-migration.md
.claude/agents/_shared/: context.md
.claude/skills/dbt-platform/: SKILL.md
dbt_platform/: __init__.py  cli.py
dbt_platform/data/agents/: agent-00-standards.md  agent-01-scenario.md  agent-02-ods.md  agent-04-dws.md  agent-05-dim.md
dbt_platform/engine/: __init__.py
dbt_platform/engine/adapters/: __init__.py  base.py
dbt_platform/engine/bi/: __init__.py  config_schema.py  generator.py  query.py  renderer.py
dbt_platform/engine/ci_templates/: __init__.py
dbt_platform/engine/generators/: __init__.py  (+1 more)
docs/: index.html  产品介绍报告.md  产品功能清单_15模块.md  用户手册.md  项目手册.md
docs/screenshots/: README.md
macros/: alter_add_columns.sql  audit_columns.sql  describe_table.sql  get_columns.sql  group_concat.sql  incremental_filter.sql  sap_date.sql  sap_flag.sql  sap_string.sql
models/dwd/: test_customers.sql
output/: product_intro.html
platform/: README.md  index.html  package-lock.json  package.json  start.bat  vite.config.js
platform/electron/: ipc.js  main.js  preload.js
platform/src/: App.css  App.jsx
scripts/: README.md  deploy_server.py  md_to_docx.py  setup_env.py  upload_downloads.py  validate_cross_db.py
(+53 files in other folders)
